Correct word wrap on info pics
The width of the picture subtexts did not match the image width.This was causing the text to extend past the images.

--- a/styles.css
+++ b/styles.css
@@ -136,6 +136,7 @@ body {
    margin: 0px;
    color: #1F2937;
    vertical-align: top;
+   width: 200px;
 }
 
 .info ul li img {
